--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
     />
   </head>
   <body>
-    <p>Hello world.</p>
+    <div class="container-xxl">
+      <div class="row">
+        <div class="col-xl-8 mx-auto">
+          <h1>About</h1>
+          <img
+            src="https://avatars.githubusercontent.com/u/30164505?v=4"
+            alt="Photo of me"
+            width="200"
+            height="200"
+            class="my-3 rounded-circle"
+          />
+          <p>
+            My PSU CAT username is vverm, my first name's initial plus my last
+            name's first 4 letters, which looks like werm. Werm was taken on
+            GitHub so TapeWerm it was. It seems kinda edgy now but I don't want
+            to break any links over it.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
