--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-xxl">
       <div class="row">
         <div class="col-xl-8 mx-auto">
-          <h1>About</h1>
+          <h1 id="about">About</h1>
           <img
             src="https://avatars.githubusercontent.com/u/30164505?v=4"
             alt="Photo of me"
