--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container-xxl">
       <div class="row">
-        <div class="col-xl-8 mx-auto">
+        <div class="col-lg-10 col-xl-8 mx-auto">
           <h1 id="about">About</h1>
           <img
             src="https://avatars.githubusercontent.com/u/30164505?v=4"
