--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="container-xxl">
+      <h1 class="text-center">Vincent Vermilya</h1>
       <div class="row">
         <div class="col-lg-10 col-xl-8 mx-auto">
           <h1 id="about">About</h1>
@@ -24,10 +25,12 @@
             class="my-3 rounded-circle"
           />
           <p>
-            My PSU CAT username is vverm, my first name's initial plus my last
-            name's first 4 letters, which looks like werm. Werm was taken on
-            GitHub so TapeWerm it was. It seems kinda edgy now but I don't want
-            to break any links over it.
+            I am a senior undergraduate student at Portland State University
+            majoring in Computer Science. I use Bash, C, C++, Git, Linux,
+            Systemd, Vim, VS Code, and more. My PSU CAT username is vverm, my
+            first name's initial plus my last name's first 4 letters, which
+            looks like werm. Werm was taken on GitHub so TapeWerm it was. It
+            seems kinda edgy now but I don't want to break any links over it.
           </p>
         </div>
       </div>
