--- a/index.html
+++ b/index.html
@@ -10,21 +10,49 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container-fluid">
+        <button
+          type="button"
+          class="navbar-toggler"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="navbar-nav">
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#work">Work</a>
+            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#contact">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="container-xxl">
-      <h1 class="text-center">Vincent Vermilya</h1>
+      <h1 class="text-center my-3">Vincent Vermilya</h1>
       <div class="row">
         <div class="col-lg-10 col-xl-8 mx-auto">
-          <h1 id="about">About</h1>
+          <h1 id="about" class="my-3">About</h1>
           <img
             src="https://avatars.githubusercontent.com/u/30164505?v=4"
             alt="Photo of me"
             width="200"
             height="200"
-            class="my-3 rounded-circle"
+            class="rounded-circle my-3"
           />
-          <p>
+          <p class="my-3">
             I am a senior undergraduate student at Portland State University
             majoring in Computer Science. I use Bash, C, C++, Git, Linux,
             Systemd, Vim, VS Code, and more. My PSU CAT username is vverm, my
