Add work and projects
Still needs contact form
Still needs ADA review
Still needs outside source review
Still needs sources added to journal at end

--- a/index.html
+++ b/index.html
@@ -54,12 +54,52 @@
           />
           <p class="my-3">
             I am a senior undergraduate student at Portland State University
-            majoring in Computer Science. I use Bash, C, C++, Git, Linux,
-            Systemd, Vim, VS Code, and more. My PSU CAT username is vverm, my
-            first name's initial plus my last name's first 4 letters, which
-            looks like werm. Werm was taken on GitHub so TapeWerm it was. It
-            seems kinda edgy now but I don't want to break any links over it.
+            majoring in Computer Science. My PSU CAT username is vverm, my first
+            name's initial plus my last name's first 4 letters, which looks like
+            werm. Werm was taken on GitHub so TapeWerm it was. It seems kinda
+            edgy now but I don't want to break any links over it.
           </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-10 col-xl-8 mx-auto">
+          <h1 id="work" class="my-3">Work</h1>
+          <ul class="my-3">
+            <li class="my-3">
+              Portland State University - Facilities & Property Management<br />
+              Student Electrical Assistant<br />
+              November 2016 to Present
+            </li>
+            <li class="my-3">
+              Portland State University - Computer Action Team<br />
+              Help Desk Support, Hardware Technician<br />
+              October 2016 to Present
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-10 col-xl-8 mx-auto">
+          <h1 id="projects" class="my-3">Projects</h1>
+          <ul class="my-3">
+            <li class="my-3">
+              <a href="https://github.com/TapeWerm/MCscripts">MCscripts</a>
+              <br />
+              Minecraft Java and Bedrock Dedicated Server systemd units and
+              scripts for backups, automatic updates, and posting logs to chat
+              bots
+            </li>
+            <li class="my-3">
+              <a href="https://github.com/TapeWerm/govdeals">govdeals</a>
+              <br />
+              My friend rattboi made a cool bot that scraped the old PSU Surplus
+              website and posted new items to IRC. The 2 problems with it is it
+              is a slow Python program and PSU Surplus dumped its old site for
+              GovDeals and will use a new site after the pandemic. I decided to
+              make a mediocre new web scraper for the temporary site that just
+              so happens to count towards completing a class. Hurrah.
+            </li>
+          </ul>
         </div>
       </div>
     </div>
