--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
       <div class="row">
         <div class="col-lg-10 col-xl-8 mx-auto">
           <h1 id="projects" class="my-3">Projects</h1>
+          <img
+            src="Nether Portal.png"
+            alt="Minecraft screenshot"
+            width="200"
+            height="200"
+            class="rounded-circle my-3"
+          />
           <ul class="my-3">
             <li class="my-3">
               <a href="https://github.com/TapeWerm/MCscripts">MCscripts</a>
