Add CS 300 project
More journal word count fulfillment

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <br />
               Minecraft Java and Bedrock Dedicated Server systemd units and
               scripts for backups, automatic updates, and posting logs to chat
-              bots
+              bots.
             </li>
             <li class="my-3">
               <a href="https://github.com/TapeWerm/govdeals">govdeals</a>
@@ -106,7 +106,18 @@
               make a mediocre new web scraper for the temporary site that just
               so happens to count towards completing a class. Hurrah.
             </li>
+            <a href="https://github.com/theCoosome/FRUPAL1220">
+              The Kingdom of Frupal
+            </a>
+            <br />
+            The CS 300 Group Project was a 2D game written using C++ and
+            ncurses.
           </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-10 col-xl-8 mx-auto">
+          <h1 id="contact" class="my-3">Contact</h1>
         </div>
       </div>
     </div>
