--- a/index.html
+++ b/index.html
@@ -106,12 +106,14 @@
               make a mediocre new web scraper for the temporary site that just
               so happens to count towards completing a class. Hurrah.
             </li>
-            <a href="https://github.com/theCoosome/FRUPAL1220">
-              The Kingdom of Frupal
-            </a>
-            <br />
-            The CS 300 Group Project was a 2D game written using C++ and
-            ncurses.
+            <li class="my-3">
+              <a href="https://github.com/theCoosome/FRUPAL1220">
+                The Kingdom of Frupal
+              </a>
+              <br />
+              The CS 300 Group Project was a 2D game written using C++ and
+              ncurses.
+            </li>
           </ul>
         </div>
       </div>
