--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
               </a>
               <br />
               The CS 300 Group Project was a 2D game written using C++ and
-              ncurses.
+              ncurses. By Bailey Manzer, Colton Jelsema, Jonnie Herrera, Leah
+              Moser, Vincent Vermilya.
             </li>
           </ul>
         </div>
