Add contact form
I might add a modal that says it is non functional
Still gotta finish the ADA review
Still gotta finish the journal

--- a/index.html
+++ b/index.html
@@ -121,6 +121,46 @@
       <div class="row">
         <div class="col-lg-10 col-xl-8 mx-auto">
           <h1 id="contact" class="my-3">Contact</h1>
+          <form>
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="form-group my-3">
+                  <label for="name">Name:</label>
+                  <input type="text" id="name" class="form-control" />
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="form-group my-3">
+                  <label for="email">Email:</label>
+                  <input type="email" id="email" class="form-control" />
+                </div>
+              </div>
+            </div>
+            <div class="form-group my-3">
+              <label for="message">Message:</label>
+              <textarea id="message" class="form-control"></textarea>
+            </div>
+            <div class="row">
+              <div class="col-lg-6">
+                <input
+                  type="submit"
+                  id="submit"
+                  class="btn btn-primary w-100 my-3"
+                  name="submit"
+                  value="Submit"
+                />
+              </div>
+              <div class="col-lg-6">
+                <input
+                  type="reset"
+                  id="reset"
+                  class="btn btn-secondary w-100 my-3"
+                  name="reset"
+                  value="Reset"
+                />
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
