--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="row">
         <div class="col-lg-10 col-xl-8 mx-auto">
           <h1 id="contact" class="my-3">Contact</h1>
-          <p>Form is non functional.</p>
+          <p class="my-3">Form is non functional.</p>
           <form>
             <div class="row">
               <div class="col-lg-6">
