Use d-grid instead of w-100
This is like Bootstrap's example
It looks the same as before

--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@
               <textarea id="message" class="form-control"></textarea>
             </div>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-6 d-grid">
                 <input
                   type="submit"
                   id="submit"
-                  class="btn btn-primary w-100 my-3"
+                  class="btn btn-primary my-3"
                   name="submit"
                   value="Submit"
                 />
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-6 d-grid">
                 <input
                   type="reset"
                   id="reset"
-                  class="btn btn-secondary w-100 my-3"
+                  class="btn btn-secondary my-3"
                   name="reset"
                   value="Reset"
                 />
