--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script defer src="form.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -122,24 +123,24 @@
         <div class="col-lg-10 col-xl-8 mx-auto">
           <h1 id="contact" class="my-3">Contact</h1>
           <p class="my-3">Form is non functional.</p>
-          <form>
+          <form id="contact-form">
             <div class="row">
               <div class="col-lg-6">
                 <div class="form-group my-3">
                   <label for="name">Name:</label>
-                  <input type="text" id="name" class="form-control" />
+                  <input type="text" id="name" required="true" class="form-control" />
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="form-group my-3">
                   <label for="email">Email:</label>
-                  <input type="email" id="email" class="form-control" />
+                  <input type="email" id="email" required="true" class="form-control" />
                 </div>
               </div>
             </div>
             <div class="form-group my-3">
               <label for="message">Message:</label>
-              <textarea id="message" class="form-control"></textarea>
+              <textarea id="message" required="true" class="form-control"></textarea>
             </div>
             <div class="row">
               <div class="col-lg-6 d-grid">
