--- a/index.html
+++ b/index.html
@@ -128,19 +128,33 @@
               <div class="col-lg-6">
                 <div class="form-group my-3">
                   <label for="name">Name:</label>
-                  <input type="text" id="name" required="true" class="form-control" />
+                  <input
+                    type="text"
+                    id="name"
+                    required="true"
+                    class="form-control"
+                  />
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="form-group my-3">
                   <label for="email">Email:</label>
-                  <input type="email" id="email" required="true" class="form-control" />
+                  <input
+                    type="email"
+                    id="email"
+                    required="true"
+                    class="form-control"
+                  />
                 </div>
               </div>
             </div>
             <div class="form-group my-3">
               <label for="message">Message:</label>
-              <textarea id="message" required="true" class="form-control"></textarea>
+              <textarea
+                id="message"
+                required="true"
+                class="form-control"
+              ></textarea>
             </div>
             <div class="row">
               <div class="col-lg-6 d-grid">
